--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,27 +2,21 @@
 	"name": "Jetstream",
 	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
 	"features": {
-		"ghcr.io/devcontainers-contrib/features/turborepo-npm:1": { "version": "2.1.3" },
+		"ghcr.io/devcontainers-contrib/features/turborepo-npm:1": { "version": "2.0.1" },
 		"ghcr.io/raine-works/devcontainer-features/bun:1": { "version": "1.1.30" },
-		"ghcr.io/devcontainers/features/node:1": { "version": "20.15.1" },
+		// "ghcr.io/devcontainers/features/node:1": { "version": "20.15.1" },
+		"ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
 		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},
-	"runArgs": ["--network", "host"],
-	"mounts": [
-		"source=${env:HOME}${env:USERPROFILE}/.config/gh,target=/home/vscode/.config/gh,type=bind"
-	],
+	"mounts": ["source=${env:HOME}${env:USERPROFILE}/.config/gh,target=/home/vscode/.config/gh,type=bind"],
 	"containerEnv": {
 		"NODE_ENV": "development",
 		"TZ": "UTC"
 	},
 	"customizations": {
 		"vscode": {
-			"extensions": [
-				"mhutchie.git-graph",
-				"waderyan.gitblame",
-				"esbenp.prettier-vscode"
-			]
+			"extensions": ["mhutchie.git-graph", "waderyan.gitblame", "esbenp.prettier-vscode"]
 		}
 	}
 }
