--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-	"name": "nats",
+	"name": "jetstream-demo",
 	"private": true,
 	"workspaces": [
 		"apps/*",
 		"packages/*"
 	],
 	"scripts": {
+		"dev": "turbo run dev",
 		"format": "prettier --write .",
-		"nats:start": "docker compose -f .devcontainer/docker/docker-compose.yaml up -d",
-		"nats:stop": "docker compose -f .devcontainer/docker/docker-compose.yaml down"
+		"nats:config": "helm repo add nats https://nats-io.github.io/k8s/helm/charts/ && helm repo update",
+		"nats:install": "helm install nats-cluster nats/nats -f .devcontainer/k8s/nats/values.yaml",
+		"nats:upgrade": "helm upgrade --install nats-cluster nats/nats -f .devcontainer/k8s/nats/values.yaml"
 	},
 	"devDependencies": {
-		"@nats/tsconfig": "workspace:*",
+		"@jetstream-demo/tsconfig": "workspace:*",
 		"bun-types": "1.1.30",
 		"prettier": "3.3.2",
-		"turbo": "2.1.3"
+		"turbo": "2.0.1"
 	},
 	"peerDependencies": {
 		"typescript": "5.6.3"
