--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,10 @@
 {
 	"$schema": "https://turborepo.org/schema.json",
 	"globalEnv": ["HOME", "NODE_ENV", "TZ"],
-	"tasks": {}
+	"tasks": {
+		"dev": {
+			"persistent": true,
+			"cache": false
+		}
+	}
 }
