--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,5 @@
 {
+    "name": "@raine-works/deno-demo",
     "tasks": {
         "build": "deno compile --allow-net --allow-env --env-file=.env --output=.build/app src/index.ts",
         "dev": "deno run --allow-net --allow-env --watch-hmr=src --env=.env src/index.ts",
