--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
 		"source=${env:HOME}${env:USERPROFILE}/.config/gh,target=/home/vscode/.config/gh,type=bind"
 	],
 	"containerEnv": {
-		"NODE_ENV": "development",
+		"APP_ENV": "development",
 		"TZ": "UTC"
 	},
 	"customizations": {
