--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,16 @@
 {
 	"tasks": {
+		"dev": "deno run --allow-net --watch apps/demo/src/main.ts",
 		"hook": "deno run --allow-read --allow-run --allow-write https://deno.land/x/deno_hooks@0.1.1/mod.ts"
 	},
+	"workspace": [
+		"apps/demo"
+	],
 	"fmt": {
 		"useTabs": true,
-		"indentWidth": 4,
-		"lineWidth": 120,
 		"semiColons": false,
-		"singleQuote": true
+		"singleQuote": true,
+		"indentWidth": 4,
+		"lineWidth": 120
 	}
 }
