--- a/apps/demo/deno.json
+++ b/apps/demo/deno.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"exports": "./src/main.ts",
 	"tasks": {
+		"build": "deno compile --allow-net -o .build/app src/main.ts",
 		"dev": "deno run --allow-net --watch src/main.ts",
 		"load": "k6 run --vus 1000 --duration 60s k6/load.ts"
 	},
