--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,10 @@
 {
 	"tasks": {
-		"dev": "deno run --allow-net --watch apps/demo/src/main.ts",
 		"hook": "deno run --allow-read --allow-run --allow-write https://deno.land/x/deno_hooks@0.1.1/mod.ts"
 	},
 	"workspace": [
-		"apps/demo"
+		"api",
+		"web"
 	],
 	"fmt": {
 		"useTabs": true,
@@ -12,5 +12,11 @@
 		"singleQuote": true,
 		"indentWidth": 4,
 		"lineWidth": 120
+	},
+	"compilerOptions": {
+		"lib": ["ES2020", "DOM", "DOM.Iterable", "deno.ns"],
+		"jsx": "react-jsx",
+		"jsxImportSource": "react",
+		"jsxImportSourceTypes": "@types/react"
 	}
 }
