--- a/web/deno.json
+++ b/web/deno.json
@@ -9,13 +9,13 @@
 		"serve": "deno run -RN jsr:@std/http@1/file-server dist/"
 	},
 	"imports": {
-		"@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.0",
-		"@types/react": "npm:@types/react@^18.3.11",
-		"@types/react-dom": "npm:@types/react-dom@^18.3.1",
-		"@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.3",
+		"@deno/vite-plugin": "npm:@deno/vite-plugin@1.0.0",
+		"@types/react": "npm:@types/react@18.3.11",
+		"@types/react-dom": "npm:@types/react-dom@18.3.1",
+		"@vitejs/plugin-react": "npm:@vitejs/plugin-react@4.3.3",
 		"hono": "jsr:@hono/hono@4.6.11",
-		"react": "npm:react@^18.3.1",
-		"react-dom": "npm:react-dom@^18.3.1",
-		"vite": "npm:vite@^5.4.9"
+		"react": "npm:react@18.3.1",
+		"react-dom": "npm:react-dom@18.3.1",
+		"vite": "npm:vite@5.4.9"
 	}
 }
