--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,8 @@
 {
 	"tasks": {
-		"hook": "deno run --allow-read --allow-run --allow-write https://deno.land/x/deno_hooks@0.1.1/mod.ts"
+		"build": "deno run -RE --allow-run npm:concurrently \"deno task -f api build\" \"deno task -f web build\"",
+		"dev": "deno run -RE --allow-run npm:concurrently \"deno task -f api dev\" \"deno task -f web dev\"",
+		"hook": "deno run -RW --allow-run https://deno.land/x/deno_hooks@0.1.1/mod.ts"
 	},
 	"workspace": [
 		"api",
