--- a/api/deno.json
+++ b/api/deno.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"exports": "./src/main.ts",
 	"tasks": {
-		"build": "deno compile -N -o .build/app src/main.ts",
-		"dev": "deno run -N --watch src/main.ts"
+		"build": "deno compile -REN -o .build/server src/main.ts && bash scripts/build.sh",
+		"dev": "deno run -REN --env-file --watch src/main.ts"
 	},
 	"imports": {
 		"hono": "jsr:@hono/hono@4.6.11",
