--- a/web/deno.json
+++ b/web/deno.json
@@ -4,11 +4,10 @@
 	"exports": "./src/main.tsx",
 	"tasks": {
 		"dev": "deno run -RNESW --allow-ffi --allow-run --node-modules-dir npm:vite",
-		"build": "deno run -RESW --allow-ffi --allow-run --node-modules-dir npm:vite build",
-		"preview": "deno run -RNESW --allow-ffi --allow-run --node-modules-dir npm:vite preview",
-		"serve": "deno run -RN jsr:@std/http@1/file-server dist/"
+		"build": "deno run -RESW --allow-ffi --allow-run --node-modules-dir npm:vite build"
 	},
 	"imports": {
+		"@/": "./src/",
 		"@deno/vite-plugin": "npm:@deno/vite-plugin@1.0.0",
 		"@types/react": "npm:@types/react@18.3.11",
 		"@types/react-dom": "npm:@types/react-dom@18.3.1",
