--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:23.10 AS runner
 WORKDIR /app
 ARG STACK PORT VERSION
-ENV NODE_ENV="production" STACK=${STACK} PORT=${PORT} VERSION=${VERSION}
+ENV NODE_ENV="production" LOG_LEVEL="info" TZ="UTC" STACK=${STACK} PORT=${PORT} VERSION=${VERSION}
 RUN groupadd -g 1001 deno_group
 RUN useradd -u 1001 -g deno_group -s /bin/bash -m deno_user
 COPY ./server/.build/server ./server
