--- a/portal/deno.json
+++ b/portal/deno.json
@@ -9,10 +9,12 @@
 	"imports": {
 		"@/": "./src/",
 		"@deno/vite-plugin": "npm:@deno/vite-plugin@1.0.0",
+		"@scalar/api-reference-react": "npm:@scalar/api-reference-react@0.3.147",
+		"@tanstack/react-router": "npm:@tanstack/react-router@1.82.12",
 		"@types/react": "npm:@types/react@18.3.11",
 		"@types/react-dom": "npm:@types/react-dom@18.3.1",
 		"@vitejs/plugin-react": "npm:@vitejs/plugin-react@4.3.3",
-		"hono": "jsr:@hono/hono@4.6.11",
+		"hono": "npm:hono@4.6.12",
 		"react": "npm:react@18.3.1",
 		"react-dom": "npm:react-dom@18.3.1",
 		"vite": "npm:vite@5.4.9"
